--- a/local.yml
+++ b/local.yml
@@ -17,19 +17,19 @@
     when: ansible_distribution == 'Fedora'
 
   tasks: 
-  - name: Add RPMFusion free gpg key
+  - name: Add RPMFusion free gpg key (Fedora)
     rpm_key:
       key: https://rpmfusion.org/keys?action=AttachFile&do=get&target=RPM-GPG-KEY-rpmfusion-free-fedora-2020
       state: present
     when: ansible_distribution == 'Fedora' and ansible_distribution_version == '34'
 
-  - name: Add RPMFusion nonfree gpg key
+  - name: Add RPMFusion nonfree gpg key (Fedora)
     rpm_key:
       key: https://rpmfusion.org/keys?action=AttachFile&do=get&target=RPM-GPG-KEY-rpmfusion-nonfree-fedora-2020
       state: present
     when: ansible_distribution == 'Fedora' and ansible_distribution_version == '34'
 
-  - name: Install RPM Fusion Repositories
+  - name: Install RPM Fusion Repositories (Fedora)
     dnf:
       name: 
         - https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-34.noarch.rpm
