--- a/local.yml
+++ b/local.yml
@@ -9,6 +9,11 @@
       update_cache: yes
     when: ansible_distribution == 'Ubuntu'
 
+  - name: Upgrade all packages to the latest version (Ubuntu)
+    apt:
+      name: "*"
+      state: latest
+      
   - name: Upgrade packages and update dnf cache (Fedora)
     dnf:
       name: '*'
