--- a/local.yml
+++ b/local.yml
@@ -4,22 +4,24 @@
   become: true
 
   pre_tasks:
-  - name: Run the equivalent of "apt update" as a separate step (Ubuntu)
-    apt:
-      update_cache: yes
-    when: ansible_distribution == 'Ubuntu'
-
-  - name: Upgrade all packages to the latest version (Ubuntu)
-    apt:
-      name: "*"
-      state: latest
+    - name: Update repository metadata & upgrade packages (Ubuntu)
+      block:
+        - name: Update repository metadata (Ubuntu)
+          apt:
+            update_cache: yes
+    
+        - name: Upgrade all packages to the latest version (Ubuntu)
+          apt:
+            name: "*"
+            state: latest
+      when: ansible_distribution in ['Ubuntu', "Pop!_OS"]
       
-  - name: Upgrade packages and update dnf cache (Fedora)
-    dnf:
-      name: '*'
-      update_cache: yes
-      state: latest
-    when: ansible_distribution == 'Fedora'
+    - name: Upgrade packages and update dnf cache (Fedora)
+      dnf:
+        name: '*'
+        update_cache: yes
+        state: latest
+      when: ansible_distribution == 'Fedora'
 
   tasks: 
   - name: Add RPMFusion free gpg key (Fedora)
